<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NumberConverter</string>
    <string name="action_about">About</string>
    <string name="type_label">Input Type:</string>
    <string name="input_hint">Input number to convert</string>
    <string name="convert_btn">Convert</string>
    <string name="result_bi_label">Binary</string>
    <string name="copy_btn">Copy</string>
    <string name="result_zero" translatable="false">0000000000000000</string>
    <string name="clip_data_label"> result</string>
    <string name="about_dialog_title">About NumberConverter</string>
    <string name="about_type_table_title">Types Table</string>
    <string name="decimal" translatable="false">Decimal</string>
    <string name="table_decimal">treated as Double</string>
    <string name="signed_short" translatable="false">Short</string>
    <string name="table_short">16-bit signed integer (-2^15 to 2^15-1)</string>
    <string name="signed_int" translatable="false">Int</string>
    <string name="table_int">32-bit signed integer (-2^31 to 2^31-1)</string>
    <string name="float_type" translatable="false">Float</string>
    <string name="table_float">32-bit IEEE 754 single-precision float</string>
    <string name="double_type" translatable="false">Double</string>
    <string name="table_double">64-bit IEEE 754 double-precision float</string>
    <string name="explain">Number inputted will first convert to binary, then to other types (except the origin type).</string>
    <string name="dialog_positive_button">Close</string>
    <string name="dialog_negative_button">Send Email</string>
    <string name="dialog_author">Author：<a href='http://nerd-is.in'>Loong_T</a></string>
    <string name="dialog_src">Source Code：<a href='https://github.com/Nerd-is-in/number_converter'>https://github.com/Nerd-is-in/number_converter</a></string>
    <string name="num_parse_error">Format of the number you inputted has error. Is it out of range?</string>
    <string name="action_floating">Floating</string>
    <string name="noti_title">Long click to finish</string>
    <string name="noti_content_text">Long click on the floating icon to finish app</string>

    <!-- Type Spinner String Array -->
    <string-array name="types_array" translatable="false">
        <item>Decimal</item>
        <item>Binary</item>
        <item>Hex</item>
        <item>Short</item>
        <item>Int</item>
        <item>Float</item>
        <item>Double</item>
    </string-array>
</resources>
