<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nerd_is.in.number_converter.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:id="@+id/typeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type_label" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/typeSpinner" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/typeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/inputLayout">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_btn"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/inputLayout"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/result_item_1"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_2"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_3"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_4"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_5"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_6"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_7"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_8"
                layout="@layout/result_item" />
            <include
                android:id="@+id/result_item_9"
                layout="@layout/result_item" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
